--- a/src/css/style.css
+++ b/src/css/style.css
@@ -594,6 +594,9 @@ button:hover{
     .nav-menu li{
         margin: 1rem 0;
     }
+    .nav-menu li:focus{
+        background-color: #333;
+    }
     .header-nav ul li a:hover{
         color: #fff;
         text-decoration: underline yellow 2px;
